--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!-- Notes : warning, inherited bootstrap class style can not be changed from style tags of style-sheet -->
 <html lang="en">
 <head>
-  <title>V.ROUSSEL</title>
+  <title>S2HEP-doc</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -72,35 +72,10 @@
     
 <!-- HEADER -->
 <div class="jumbotron text-center" style="margin-bottom:0 ; background-color: #34495E ;  border-radius:0% ;">
-  <h1 class="title">Valentin Roussel | Ph.D</h1>
-  <p class="sub_title_1">INSPE académie de Lyon | Université de Lyon</p>
-  <p class="sub_title_2"><b>S2HEP laboratory</b></p>
+  <h1 class="title">S2HEP Doctorants</h1>
+  <p class="sub_title_1">Page d'aide dédiée aux doctorants</p>
+  <p class="sub_title_2"><b>Laboratoire S2HEP (EA-4148)</b></p>
 </div>
 
-<!-- NAVBAR -->
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark" style="border-radius:0% ;" ;>
-  <a class="navbar-brand" href="index.html">Home</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="collapsibleNavbar">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="research.html">Research</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="cv.html">CV</a>
-      </li>    
-      <li class="nav-item">
-        <a class="nav-link" href="resources.html">Resources</a>
-      </li>    
-      <li class="nav-item">
-        <a class="nav-link" href="co_workers.html">Co-workers</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="contact.html">Contact</a>
-      </li>
-    </ul>
-  </div>  
-</nav>
+
   
