--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <th>Document</th>
         <th>Catégorie</th>
         <th>Sujet</th>
-        <th>Lien vers le document</th>
+        <th>Lien</th>
       </tr>
     </thead>
     <tbody>
