--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     </thead>
     <tbody>
  <tr class="warning">
-     <td>2020</td>
+     <td>Charte des doctorants et le test du test</td>
      <td>Article</td>
      <td>Exercer l'esprit critique en classe de mathématiques au cycle 3</td>
      <td><a href="p_actes_ARDM_2020.pdf">Link</td> 
