--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
                   color: #FBFCFC ;
                 }
   
-   p.sub_title_2 {
+ p.sub_title_2 {
                   font-size: 20px ;
                   color: #FBFCFC  ;
                   <!-- font-weight: bold ; -->
                 }
   
-  p.footer_informations {
+ p.footer_informations {
                         font-size: 24px ;
                         color: #FBFCFC ;
                         }
@@ -67,7 +67,7 @@
    <table class="table table-responsive" style="font-size: 20px;">
     <thead>
       <tr>
-        <th>Document</th>
+        <th  class="col-xs-1" >Document</th>
         <th>Catégorie</th>
         <th>Sujet</th>
         <th>Lien</th>
