--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
    <table class="table table-responsive" style="font-size: 20px;">
     <thead>
       <tr>
-        <th  class="col-xs-1" >Document</th>
-        <th>Catégorie</th>
-        <th>Sujet</th>
-        <th>Lien</th>
+        <th  class="col-xs-3" >Document</th>
+        <th  class="col-xs-2" >Catégorie</th>
+        <th  class="col-xs-3" >Sujet</th>
+        <th  class="col-xs-1" >Lien</th>
       </tr>
     </thead>
     <tbody>
