--- a/index.html
+++ b/index.html
@@ -160,18 +160,7 @@
 <!-- FOOTER -->  
 <div id="contact_anchor" class="jumbotron text-center" style="margin-bottom:0 ; background-color: #34495E ; border-radius:0% ;">
   <img align="middle" src="streamer_final_2019.png" class="img-fluid" alt="Responsive image">  </img>
-  <p class="footer_informations"><span class="glyphicon glyphicon-envelope" style="font-size: 16px ;"></span> https://s2hep.univ-lyon1.fr</p>
-  <p>
-    <i class="fa fa-github" style="font-size:18px; color: #FBFCFC ;">
-      <a style="color :#FBFCFC;" href="https://github.com/ValentinRoussel"> github.com/ValentinRoussel</a> 
-    </i>
-    <i class="fa fa-linkedin-square" style="font-size:18px; color: #FBFCFC ;"> 
-      <a style="color :#FBFCFC;" href="https://www.linkedin.com/in/rousselpro"> linkedin.com/in/rousselpro</a>
-    </i>
-    <i class="fa fa-twitter" style="font-size:18px; color: #FBFCFC ;"> 
-      <a style="color :#FBFCFC;" href="https://twitter.com/RousselValenti8"> twitter.com/RousselValenti8</a>
-    </i>
-  </p>
+  <link href="https://s2hep.univ-lyon1.fr" rel="stylesheet"> 
   </div>
   
 </html>
