--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 <!-- FOOTER -->  
 <div id="contact_anchor" class="jumbotron text-center" style="margin-bottom:0 ; background-color: #34495E ; border-radius:0% ;">
   <img align="middle" src="streamer_final_2019.png" class="img-fluid" alt="Responsive image">  </img>
-  <link href="https://s2hep.univ-lyon1.fr" rel="stylesheet"> 
+  <a href="https://s2hep.univ-lyon1.fr">Retour vers le site du laboratoire</a> 
   </div>
   
 </html>
