--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
   
 <!-- FOOTER -->  
 <div id="contact_anchor" class="jumbotron text-center" style="margin-bottom:0 ; background-color: #34495E ; border-radius:0% ;">
-  <img align="middle" src="streamer_final_2019.png" class="img-fluid" alt="Responsive image">  </img>
+  <img align="middle" src="streamer_2019.png" class="img-fluid" alt="Responsive image">  </img>
   <a href="https://s2hep.univ-lyon1.fr">Retour vers le site du laboratoire</a> 
   </div>
   
