--- a/index.html
+++ b/index.html
@@ -160,8 +160,9 @@
 <!-- FOOTER -->  
 <div id="contact_anchor" class="jumbotron text-center" style="margin-bottom:0 ; background-color: #34495E ; border-radius:0% ;">
   <img align="middle" src="streamer_2019.png" class="img-fluid" alt="Responsive image">  </img>  
-  
-<a href="https://s2hep.univ-lyon1.fr"><h2>Retour vers le site du laboratoire</h2></a> 
+  <p class="footer_informations">  
+  <a href="https://s2hep.univ-lyon1.fr"><h2>Retour vers le site du laboratoire</h2></a> 
+  </p>
 </div>
   
 </html>
