--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     
 <!-- HEADER -->
 <div class="jumbotron text-center" style="margin-bottom:0 ; background-color: #34495E ;  border-radius:0% ;">
-  <h1 class="title">S2HEP Doctorants</h1>
+  <h1 class="title">S2HEP Doctorant</h1>
   <p class="sub_title_1">Page d'aide dédiée aux doctorants</p>
   <p class="sub_title_2"><b>Laboratoire S2HEP (EA-4148)</b></p>
 </div>
