--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 <div id="contact_anchor" class="jumbotron text-center" style="margin-bottom:0 ; background-color: #34495E ; border-radius:0% ;">
   <img align="middle" src="streamer_2019.png" class="img-fluid" alt="Responsive image">  </img>  
   <p class="footer_informations">  
-  <a href="https://s2hep.univ-lyon1.fr"><h2 style="color: #FBFCFC" >Retour vers le site du laboratoire</h2></a> 
+  <a href="https://s2hep.univ-lyon1.fr" style="color:#FBFCFC"><h2>Retour vers le site du laboratoire</h2></a> 
   </p>
 </div>
   
