--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
       </tr>
     </thead>
     <tbody>
- <tr class="warning">
-     <td>Charte des doctorants et le test du test</td>
-     <td>Article</td>
-     <td>Exercer l'esprit critique en classe de mathématiques au cycle 3</td>
+ <tr class="info">
+     <td>FAQ des doctorants</td>
+     <td>Générale</td>
+     <td>Les questions courantes</td>
      <td><a href="p_actes_ARDM_2020.pdf">Link</td> 
   </tr>
   <tr class="info">
