--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
      <td>Les questions courantes</td>
      <td><a href="p_actes_ARDM_2020.pdf">Link</td> 
   </tr>
-  <tr class="info">
-       <td>2020</td>
-       <td>Open acces course</td>
-       <td>Annales du CRPE, algorithmie et programmation, INSPE 2020</td>
+  <tr class="danger">
+       <td>Charte des doctorants</td>
+       <td>Droits et obligations</td>
+       <td>Charte des doctorants de l'université de Lyon</td>
        <td><a href="p_crpe_annale_2.pdf">Link</td> 
     </tr>
     <tr class="info">
