--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <td>Exemple de formulaire de candidature pour une (ré)inscription en doctorat </td>
         <td><a href="p_poster_v2_AO_site_web.pdf">Link</td>
     </tr>     
-    <tr class="succes">
+    <tr class="success">
        <td>Formulaire ACE</td>
        <td>Formulaire</td>
        <td>Exemple de formulaire de candidature à une activité complémentaire d'enseignement</td>
