--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
        <td>Charte des doctorants</td>
        <td>Droits et obligations</td>
        <td>Charte des doctorants de l'université de Lyon</td>
-       <td><a href="p_crpe_annale_2.pdf">Link</td>
-       <td><a href="p_actes_ARDM_2020.pdf">Link</td> 
+       <td><a href="charte.pdf">Lien</td>
+       <td><a href="https://faqsiged.universite-lyon.fr/les-documents-de-la-these-21346.kjsp">Lien</td> 
     </tr>
     <tr class="danger">
        <td>Charte informatique</td>
