--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
        <td>Guide du doctorant</td>
        <td>Générale</td>
        <td>Guide des doctorants de l'université de Lyon</td>
-       <td><a href="p_bayes_cours_3.pdf">Link</td> 
-       <td><a href="p_actes_ARDM_2020.pdf">Link</td> 
+       <td><a href="doctorants_guide.pdf">Link</td> 
+       <td><a href="https://faqsiged.universite-lyon.fr/les-documents-de-la-these-21346.kjsp">Lien</td> 
     </tr>
     <tr class="success">
         <td>Comité annuel de suivi de thèse</td>
