--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
   <p class="sub_title_2"><b>Laboratoire S2HEP (EA-4148)</b></p>
 </div>
 
+<h2>Titre de niveau 2</h2>
 <!-- CONTAINER -->    
 <div class="container" style="margin-top:30px ; margin-bottom:30px;" >
    <table class="table table-responsive" style="font-size: 20px;">
