--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
         <td>Comité annuel de suivi de thèse</td>
         <td>Formulaire</td>
         <td>Exemple de rapport du comité de suivi individuel de thèse (version 2020)</td>
-        <td><a href="p_collectif_math_2019.pdf">Link</td> 
-        <td><a href="p_actes_ARDM_2020.pdf">Link</td> 
+        <td><a href="comite_suivi_these.pdf">Link</td> 
+        <td>Doit être demandé à la direction du laboratoire</td> 
     </tr> 
     <tr class="success">
         <td>Formulaire de réinscription</td>
