--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <td>Formulaire</td>
         <td>Exemple de rapport du comité de suivi individuel de thèse (version 2020)</td>
         <td><a href="comite_suivi_these.pdf">Link</td> 
-        <td>Doit être demandé à la direction du laboratoire</td> 
+        <td>Vous devez la demander à la direction du laboratoire vers fin avril</td> 
     </tr> 
     <tr class="success">
         <td>Formulaire de réinscription</td>
