--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
         <td>Formulaire de réinscription</td>
         <td>Formulaire</td>
         <td>Exemple de formulaire de candidature pour une (ré)inscription en doctorat </td>
-        <td><a href="p_poster_v2_AO_site_web.pdf">Link</td>
-        <td><a href="p_actes_ARDM_2020.pdf">Link</td> 
+        <td><a href="fiche_SIGED.pdf">Link</td>
+        <td>Vous devez la télécharger depuis votre espace personnel sur SIGED après inscription ou ré-inscription</td> 
     </tr>     
     <tr class="success">
        <td>Formulaire ACE</td>
