--- a/index.html
+++ b/index.html
@@ -126,11 +126,11 @@
        <td><a href="p_actes_ARDM_2020.pdf">Link</td> 
     </tr>  
     <tr class="warning">
-       <td>2018</td>
-       <td>First master thesis</td>
-       <td>Notions de Géométrie & TICE - Pratiques et invariants didactiques des situations d'apprentissage</td>
-       <td><a href="p_roussel_2018.pdf">Link</td> 
-       <td><a href="p_actes_ARDM_2020.pdf">Link</td> 
+       <td>Extrait "Comment écrire sa thèse ?" </td>
+       <td>Aide à la thèses</td>
+       <td>Un extrait de "Comment écrire sa thèse", de Umberto Eco. Réflexion sur le temps nécessaire à l'écriture du thèse.</td>
+       <td><a href="Eco_Comment_écrire_sa_thèse.pdf">Link</td> 
+       <td>Voir site de la BNF, bibliothèques, google scholar etc.</td> 
      </tr>
    </tbody>
   </table>
