--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
        <td>Formulaire ACE</td>
        <td>Formulaire</td>
        <td>Exemple de formulaire de candidature à une activité complémentaire d'enseignement</td>
-       <td><a href="p_crpe_algo_cours.pdf">Link</td> 
-       <td><a href="p_actes_ARDM_2020.pdf">Link</td> 
+       <td><a href="exemple_dossier_candidature_ACE.pdf">Link</td> 
+       <td>Les formulaires sont à télécharger en fonction des appels à candidature pour ACE. Les appels ont lieu entre fin août et mi-octobre.</td> 
     </tr>  
     <tr class="warning">
        <td>Extrait "Comment écrire sa thèse ?" </td>
