--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
        <td><a href="exemple_dossier_candidature_ACE.pdf">Link</td> 
        <td>Les formulaires sont à télécharger en fonction des appels à candidature pour ACE. Les appels ont lieu entre fin août et mi-octobre.</td> 
     </tr>  
-    <tr class="warning">
+    <tr class="light">
        <td>Extrait "Comment écrire sa thèse ?" </td>
        <td>Aide à la thèses</td>
        <td>Un extrait de "Comment écrire sa thèse", de Umberto Eco. Réflexion sur le temps nécessaire à l'écriture du thèse.</td>
