--- a/index.html
+++ b/index.html
@@ -125,11 +125,18 @@
        <td><a href="exemple_dossier_candidature_ACE.pdf">Link</td> 
        <td>Les formulaires sont à télécharger en fonction des appels à candidature pour ACE. Les appels ont lieu entre fin août et mi-octobre.</td> 
     </tr>  
-    <tr class="light">
+    <tr class="warning">
        <td>Extrait "Comment écrire sa thèse ?" </td>
        <td>Aide à la thèses</td>
        <td>Un extrait de "Comment écrire sa thèse", de Umberto Eco. Réflexion sur le temps nécessaire à l'écriture du thèse.</td>
        <td><a href="Eco_Comment_écrire_sa_thèse.pdf">Link</td> 
+       <td>Voir site de la BNF, bibliothèques, google scholar etc.</td> 
+     </tr>
+    <tr class="light">
+       <td>Ingénierie didactique</td>
+       <td>Théorie, méthodologie</td>
+       <td>Les phases de l'inténierie didactique, Michèle Artigue</td>
+       <td><a href="ingénierie_didactique_phases.pdf">Link</td> 
        <td>Voir site de la BNF, bibliothèques, google scholar etc.</td> 
      </tr>
    </tbody>
