--- a/index.html
+++ b/index.html
@@ -139,6 +139,13 @@
        <td><a href="ingénierie_didactique_phases.pdf">Link</td> 
        <td>Voir site de la BNF, bibliothèques, google scholar etc.</td> 
      </tr>
+    <tr class="light">
+       <td>théorie anthropologique du didactique</td>
+       <td>Théorie, méthodologie</td>
+       <td>Cours de Yves Chevallard</td>
+       <td><a href="TAD_Analyse_des_pratiques_enseignantes.pdf">Link</td> 
+       <td>Aucune</td> 
+     </tr>
    </tbody>
   </table>
 </div>
