--- a/index.html
+++ b/index.html
@@ -140,14 +140,14 @@
        <td>Voir site de la BNF, bibliothèques, google scholar etc.</td> 
      </tr>
     <tr class="light">
-       <td>théorie anthropologique du didactique</td>
+       <td>Théorie anthropologique du didactique</td>
        <td>Théorie, méthodologie</td>
        <td>Cours de Yves Chevallard</td>
        <td><a href="TAD_Analyse_des_pratiques_enseignantes.pdf">Link</td> 
        <td>Aucune</td> 
      </tr>
     <tr class="light">
-       <td>théorie anthropologique du didactique</td>
+       <td>Théorie anthropologique du didactique</td>
        <td>Théorie, méthodologie</td>
        <td>Cours de Hamid Chaachou</td>
        <td><a href="TAD_Le rôle de l'analyse des manuels dans la Théorie Anthropologique du Didactique.pdf">Link</td> 
