--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     <tr class="light">
        <td>Théorie anthropologique du didactique</td>
        <td>Théorie, méthodologie</td>
-       <td>Cours de Hamid Chaachou</td>
+       <td>Cours de Hamid Chaachoua</td>
        <td><a href="TAD_Le rôle de l'analyse des manuels dans la Théorie Anthropologique du Didactique.pdf">Link</td> 
        <td>Aucune</td> 
      </tr>
