--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
      <td>FAQ des doctorants</td>
      <td>Générale</td>
      <td>Les questions courantes</td>
-     <td><a href="p_actes_ARDM_2020.pdf">Link</td>
-     <td><a href="p_actes_ARDM_2020.pdf">Link</td> 
+     <td><a href="p_actes_ARDM_2020.pdf">Lien</td>
+     <td><a href="p_actes_ARDM_2020.pdf">Lien</td> 
   </tr>
   <tr class="danger">
        <td>Charte des doctorants</td>
@@ -101,56 +101,56 @@
        <td>Guide du doctorant</td>
        <td>Générale</td>
        <td>Guide des doctorants de l'université de Lyon</td>
-       <td><a href="doctorants_guide.pdf">Link</td> 
+       <td><a href="doctorants_guide.pdf">Lien</td> 
        <td><a href="https://faqsiged.universite-lyon.fr/les-documents-de-la-these-21346.kjsp">Lien</td> 
     </tr>
     <tr class="success">
         <td>Comité annuel de suivi de thèse</td>
         <td>Formulaire</td>
         <td>Exemple de rapport du comité de suivi individuel de thèse (version 2020)</td>
-        <td><a href="comite_suivi_these.pdf">Link</td> 
+        <td><a href="comite_suivi_these.pdf">Lien</td> 
         <td>Vous devez la demander à la direction du laboratoire vers fin avril</td> 
     </tr> 
     <tr class="success">
         <td>Formulaire de réinscription</td>
         <td>Formulaire</td>
         <td>Exemple de formulaire de candidature pour une (ré)inscription en doctorat </td>
-        <td><a href="fiche_SIGED.pdf">Link</td>
+        <td><a href="fiche_SIGED.pdf">Lien</td>
         <td>Vous devez la télécharger depuis votre espace personnel sur SIGED après inscription ou ré-inscription</td> 
     </tr>     
     <tr class="success">
        <td>Formulaire ACE</td>
        <td>Formulaire</td>
        <td>Exemple de formulaire de candidature à une activité complémentaire d'enseignement</td>
-       <td><a href="exemple_dossier_candidature_ACE.pdf">Link</td> 
+       <td><a href="exemple_dossier_candidature_ACE.pdf">Lien</td> 
        <td>Les formulaires sont à télécharger en fonction des appels à candidature pour ACE. Les appels ont lieu entre fin août et mi-octobre.</td> 
     </tr>  
     <tr class="warning">
        <td>Extrait "Comment écrire sa thèse ?" </td>
        <td>Aide à la thèses</td>
        <td>Un extrait de "Comment écrire sa thèse", de Umberto Eco. Réflexion sur le temps nécessaire à l'écriture du thèse.</td>
-       <td><a href="Eco_Comment_écrire_sa_thèse.pdf">Link</td> 
+       <td><a href="Eco_Comment_écrire_sa_thèse.pdf">Lien</td> 
        <td>Voir site de la BNF, bibliothèques, google scholar etc.</td> 
      </tr>
     <tr class="light">
        <td>Ingénierie didactique</td>
        <td>Théorie, méthodologie</td>
        <td>Les phases de l'inténierie didactique, Michèle Artigue</td>
-       <td><a href="ingénierie_didactique_phases.pdf">Link</td> 
+       <td><a href="ingénierie_didactique_phases.pdf">Lien</td> 
        <td>Voir site de la BNF, bibliothèques, google scholar etc.</td> 
      </tr>
     <tr class="light">
        <td>Théorie anthropologique du didactique</td>
        <td>Théorie, méthodologie</td>
        <td>Cours de Yves Chevallard</td>
-       <td><a href="TAD_Analyse_des_pratiques_enseignantes.pdf">Link</td> 
+       <td><a href="TAD_Analyse_des_pratiques_enseignantes.pdf">Lien</td> 
        <td>Aucune</td> 
      </tr>
     <tr class="light">
        <td>Théorie anthropologique du didactique</td>
        <td>Théorie, méthodologie</td>
        <td>Cours de Hamid Chaachoua</td>
-       <td><a href="TAD_Le rôle de l'analyse des manuels dans la Théorie Anthropologique du Didactique.pdf">Link</td> 
+       <td><a href="TAD_Le rôle de l'analyse des manuels dans la Théorie Anthropologique du Didactique.pdf">Lien</td> 
        <td>Aucune</td> 
      </tr>
    </tbody>
