--- a/index.html
+++ b/index.html
@@ -153,6 +153,27 @@
        <td><a href="TAD_Le rôle de l'analyse des manuels dans la Théorie Anthropologique du Didactique.pdf">Lien</td> 
        <td>Aucune</td> 
      </tr>
+    <tr class="light">
+       <td>Théorie des situations didactiques</td>
+       <td>Théorie, méthodologie</td>
+       <td>Cours de Guy Brousseau</td>
+       <td><a href="TSD_Cours_Brousseau.pdf">Lien</td> 
+       <td>Aucune</td> 
+     </tr>
+    <tr class="light">
+       <td>Théorie des situations didactiques</td>
+       <td>Théorie, méthodologie</td>
+       <td>Glossaire de Guy Brousseau</td>
+       <td><a href="TSD_glossaire_brousseau.pdf">Lien</td> 
+       <td>Aucune</td> 
+     </tr>
+    <tr class="light">
+       <td>Théorie des situations didactiques</td>
+       <td>Théorie, méthodologie</td>
+       <td>Glossaire d'Alain Kuzniak</td>
+       <td><a href="TSD_cours_kuzniak.pdf">Lien</td> 
+       <td>Aucune</td> 
+     </tr>
    </tbody>
   </table>
 </div>
