--- a/index.html
+++ b/index.html
@@ -174,6 +174,13 @@
        <td><a href="TSD_cours_kuzniak.pdf">Lien</td> 
        <td>Aucune</td> 
      </tr>
+    <tr class="light">
+       <td>Glossaire des biais cognitifs</td>
+       <td>Théorie, méthodologie</td>
+       <td>Un document que tout doctorant devrait avoir lu au moins une fois...</td>
+       <td><a href="codex-biais-cognitifs.pdf">Lien</td> 
+       <td>Aucune</td> 
+     </tr>
    </tbody>
   </table>
 </div>
