--- a/index.html
+++ b/index.html
@@ -181,6 +181,13 @@
        <td><a href="codex-biais-cognitifs.pdf">Lien</td> 
        <td>Aucune</td> 
      </tr>
+    <tr class="light">
+       <td>Biais méthodologiques</td>
+       <td>Théorie, méthodologie</td>
+       <td>La base pour éviter quelques biais méthodologiques</td>
+       <td><a href="bases_methode_scientifique.pdf">Lien</td> 
+       <td>Aucune</td> 
+     </tr>
    </tbody>
   </table>
 </div>
