--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     <tr class="light">
        <td>Théorie des situations didactiques</td>
        <td>Théorie, méthodologie</td>
-       <td>Glossaire d'Alain Kuzniak</td>
+       <td>Cours d'Alain Kuzniak</td>
        <td><a href="TSD_cours_kuzniak.pdf">Lien</td> 
        <td>Aucune</td> 
      </tr>
