--- a/index.html
+++ b/index.html
@@ -132,6 +132,13 @@
        <td><a href="Eco_Comment_écrire_sa_thèse.pdf">Lien</td> 
        <td>Voir site de la BNF, bibliothèques, google scholar etc.</td> 
      </tr>
+    <tr class="warning">
+       <td>Concevoir des diagrammes</td>
+       <td>Aide à la thèses</td>
+       <td>Marre de Word et PowerPoint ? Faire des diagrammes magnifiques, professionnels et gratuits avec DRAW.IO</td>
+       <td><a href="https://app.diagrams.netf">Lien</td> 
+       <td>Aucune</td> 
+     </tr>
     <tr class="light">
        <td>Ingénierie didactique</td>
        <td>Théorie, méthodologie</td>
