--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
        <td>Les formulaires sont à télécharger en fonction des appels à candidature pour ACE. Les appels ont lieu entre fin août et mi-octobre.</td> 
     </tr>  
     <tr class="warning">
-       <td>Extrait "Comment écrire sa thèse ?" </td>
+       <td>Extrait de "Comment écrire sa thèse ?"</td>
        <td>Aide à la thèses</td>
        <td>Un extrait de "Comment écrire sa thèse", de Umberto Eco. Réflexion sur le temps nécessaire à l'écriture du thèse.</td>
        <td><a href="Eco_Comment_écrire_sa_thèse.pdf">Lien</td> 
