--- a/index.html
+++ b/index.html
@@ -139,6 +139,13 @@
        <td><a href="https://app.diagrams.netf">Lien</td> 
        <td>Aucune</td> 
      </tr>
+    <tr class="warning">
+       <td>Traitement de texte</td>
+       <td>Aide à la thèses</td>
+       <td>Rédiger des articles professionnels et structurés avec LaTeX</td>
+       <td><a href="https://fr.wikipedia.org/wiki/LaTeX">Lien</td> 
+       <td>Aucune</td> 
+     </tr>
     <tr class="light">
        <td>Ingénierie didactique</td>
        <td>Théorie, méthodologie</td>
