--- a/index.html
+++ b/index.html
@@ -133,21 +133,21 @@
        <td>Voir site de la BNF, bibliothèques, google scholar etc.</td> 
      </tr>
     <tr class="warning">
-       <td>Concevoir des diagrammes? DRAW.IO</td>
+       <td>Concevoir des diagrammes avec DRAW.IO</td>
        <td>Aide à la thèses</td>
        <td>Marre de Word et PowerPoint ? Faire des diagrammes magnifiques, professionnels et gratuits avec DRAW.IO</td>
        <td><a href="https://app.diagrams.netf">Lien</td> 
        <td>Aucune</td> 
      </tr>
     <tr class="warning">
-       <td>Traitement de texte, LaTex</td>
+       <td>Traitement de texte avec LaTex</td>
        <td>Aide à la thèses</td>
        <td>Rédiger des articles professionnels et structurés avec LaTeX</td>
        <td><a href="https://fr.wikipedia.org/wiki/LaTeX">Lien</td> 
        <td>Aucune</td> 
      </tr>
     <tr class="warning">
-       <td>Bibliographie, Zotero</td>
+       <td>Bibliographie avec Zotero</td>
        <td>Aide à la thèses</td>
        <td>Gérer et centraliser des données bibliographiques et des documents de recherche</td>
        <td><a href="https://fr.wikipedia.org/wiki/Zotero">Lien</td> 
