--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
 
 <!-- CONTAINER -->    
 <div class="container" style="margin-top:30px ; margin-bottom:30px;" >
+  <p><h2>Bibliothèque numérique des doctorants </h2></p>
+  <p><h4>Lorem Ipsum sin amet Lorem Ipsum sin amet Lorem Ipsum sin amet Lorem Ipsum sin amet Lorem 
+  Ipsum sin amet Lorem Ipsum sin amet Lorem Ipsum sin amet Lorem Ipsum sin amet Lorem Ipsum sin amet  </h4></p>
    <table class="table table-responsive" style="font-size: 20px;">
     <thead>
       <tr>
