--- a/index.html
+++ b/index.html
@@ -66,8 +66,11 @@
 <!-- CONTAINER -->    
 <div class="container" style="margin-top:30px ; margin-bottom:30px;" >
   <p><h2>Bibliothèque numérique des doctorants </h2></p>
-  <p><h4>Lorem Ipsum sin amet Lorem Ipsum sin amet Lorem Ipsum sin amet Lorem Ipsum sin amet Lorem 
-  Ipsum sin amet Lorem Ipsum sin amet Lorem Ipsum sin amet Lorem Ipsum sin amet Lorem Ipsum sin amet  </h4></p>
+  <p><h4>Sur cette page vous trouverez la plupart des documents essentiels à la poursuite d’un doctorant 
+  au sein du laboratoire : administratifs, aide théorique et méthodologique, exemples de formulaires, 
+  logiciels etc… Attention, certains documents ne sont qu’illustratifs : leur dernière version n’est 
+  disponible que sur les sites dédiés et à certaines périodes de l’année, c’est pas exemple le cas pour 
+  le formulaire de candidature aux activités complémentaires d’enseignement. </h4></p>
    <table class="table table-responsive" style="font-size: 20px;">
     <thead>
       <tr>
