--- a/index.html
+++ b/index.html
@@ -106,6 +106,14 @@
     <tr class="danger">
        <td>Charte informatique</td>
        <td>Droits et obligations</td>
+       <td>Modalités de collecte et de traitement de données personnelles dans le cadre 
+         de la participation à une recherche</td>
+       <td><a href="RGPD_lettre_info_ proposition.pdf">Link</td> 
+       <td><a href="https://etu.univ-lyon1.fr/consignes-a-respecter-pour-diffuser-un-questionnaire-formulaire-sur-les-listes-de-diffusion-et-les-sites-internet-lyon-1">Lien</td> 
+    </tr>
+    <tr class="danger">
+       <td>Règlement général sur la protection des données</td>
+       <td>Droits et obligations</td>
        <td>Charte informatique des doctorants de l'université de Lyon</td>
        <td><a href="charte_informatique.pdf">Link</td> 
        <td><a href="https://faqsiged.universite-lyon.fr/les-documents-de-la-these-21346.kjsp">Lien</td> 
@@ -139,9 +147,23 @@
        <td>Voir site de la BNF, bibliothèques, google scholar etc.</td> 
      </tr>
     <tr class="warning">
+       <td>Organiser sa thèse et ses recherches</td>
+       <td>Aide à la thèses</td>
+       <td>Un guide synthètique et quelques astuces pour optimiser son travail de thèse</td>
+       <td><a href="guide_redaction_thèse_merged.pdf">Lien</td> 
+       <td>Aucune</td> 
+     </tr>
+    <tr class="warning">
+       <td>Préparer un état de l'art</td>
+       <td>Aide à la thèses</td>
+       <td>Un cours sur la réalisation d'un état de l'art</td>
+       <td><a href="Preparer-un-etat-de -lart.pdf">Lien</td> 
+       <td>Aucune</td> 
+     </tr>
+    <tr class="warning">
        <td>Concevoir des diagrammes avec DRAW.IO</td>
        <td>Aide à la thèses</td>
-       <td>Marre de Word et PowerPoint ? Faire des diagrammes magnifiques, professionnels et gratuits avec DRAW.IO</td>
+       <td>Faire des diagrammes magnifiques, professionnels et gratuits avec DRAW.IO</td>
        <td><a href="https://app.diagrams.netf">Lien</td> 
        <td>Aucune</td> 
      </tr>
