--- a/index.html
+++ b/index.html
@@ -108,14 +108,14 @@
        <td>Droits et obligations</td>
        <td>Modalités de collecte et de traitement de données personnelles dans le cadre 
          de la participation à une recherche</td>
-       <td><a href="RGPD_lettre_info_ proposition.pdf">Link</td> 
+       <td><a href="RGPD_lettre_info_ proposition.pdf">Lien</td> 
        <td><a href="https://etu.univ-lyon1.fr/consignes-a-respecter-pour-diffuser-un-questionnaire-formulaire-sur-les-listes-de-diffusion-et-les-sites-internet-lyon-1">Lien</td> 
     </tr>
     <tr class="danger">
        <td>Règlement général sur la protection des données</td>
        <td>Droits et obligations</td>
        <td>Charte informatique des doctorants de l'université de Lyon</td>
-       <td><a href="charte_informatique.pdf">Link</td> 
+       <td><a href="charte_informatique.pdf">Lien</td> 
        <td><a href="https://faqsiged.universite-lyon.fr/les-documents-de-la-these-21346.kjsp">Lien</td> 
     </tr>
     <tr class="success">
