--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
        <td>Règlement général sur la protection des données</td>
        <td>Droits et obligations</td>
        <td>Charte informatique des doctorants de l'université de Lyon</td>
-       <td><a href="charte_informatique.pdf">Lien</td> 
+       <td><a href="RGPD_lettre_info_ proposition.pdf">Lien</td> 
        <td><a href="https://faqsiged.universite-lyon.fr/les-documents-de-la-these-21346.kjsp">Lien</td> 
     </tr>
     <tr class="success">
