--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
   logiciels etc… Attention, certains documents ne sont qu’illustratifs : leur dernière version n’est 
   disponible que sur les sites dédiés de l'université et à certaines périodes de l’année, c’est pas exemple le cas pour 
   le formulaire de candidature aux activités complémentaires d’enseignement. </h4></p>
+  <p style="color:#FBFCFC";><h4><b>This text is bold</b> </h4></p>
    <table class="table table-responsive" style="font-size: 20px;">
     <thead>
       <tr>
@@ -87,7 +88,7 @@
      <td>Générale</td>
      <td>Les questions courantes</td>
      <td><a href="p_actes_ARDM_2020.pdf">Lien</td>
-     <td><a href="p_actes_ARDM_2020.pdf">Lien</td> 
+     <td>Mis à jour régulièrement</td> 
   </tr>
    <tr class="info">
       <td>Guide du doctorant</td>
