--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   logiciels etc… Attention, certains documents ne sont qu’illustratifs : leur dernière version n’est 
   disponible que sur les sites dédiés de l'université et à certaines périodes de l’année, c’est pas exemple le cas pour 
   le formulaire de candidature aux activités complémentaires d’enseignement. </h4></p>
-  <p style="color:#FBFCFC";><h4><b>This text is bold</b> </h4></p>
+  <p style="color:#34495E";><h4><b>This text is bold</b> </h4></p>
    <table class="table table-responsive" style="font-size: 20px;">
     <thead>
       <tr>
