--- a/index.html
+++ b/index.html
@@ -71,7 +71,15 @@
   logiciels etc… Attention, certains documents ne sont qu’illustratifs : leur dernière version n’est 
   disponible que sur les sites dédiés de l'université et à certaines périodes de l’année, c’est pas exemple le cas pour 
   le formulaire de candidature aux activités complémentaires d’enseignement. </h4></p>
-  <p style="color:#34495E";><h4><b>This text is bold</b> </h4></p>
+  <p><h4><b>Pour toute demande de financement (colloque, séminaire, trajet, soutenance etc.) 
+    vous devez en priorité prendre contact avec le.la responsable de votre thème d’appartenance. 
+    Si votre demande est acceptée, vous pouvez alors prendre contact avec votre école doctorale de 
+    rattachement afin de demander une aide financière supplémentaire : la participation financière de 
+    votre école doctorale étant le plus souvent conditionnée par la participation du laboratoire. </b> </h4></p>
+<p><h4><a href="https://s2hep.univ-lyon1.fr/theme-1-savoirs-et-dispositifs-pour-lenseignement-la-formation-et-la-mediation-en-science">Thème 1
+        <a href="https://s2hep.univ-lyon1.fr/theme-2-historicite">Thème 2
+         <a href="https://s2hep.univ-lyon1.fr/theme-3-transformations-de-la-sante-et-du-corps">Thème 3
+</h4></p>
    <table class="table table-responsive" style="font-size: 20px;">
     <thead>
       <tr>
@@ -107,15 +115,15 @@
     <tr class="danger">
        <td>Charte informatique</td>
        <td>Droits et obligations</td>
-       <td>Modalités de collecte et de traitement de données personnelles dans le cadre 
-         de la participation à une recherche</td>
+       <td>Charte informatique des doctorants de l'université de Lyon</td>
        <td><a href="RGPD_lettre_info_ proposition.pdf">Lien</td> 
        <td><a href="https://faqsiged.universite-lyon.fr/les-documents-de-la-these-21346.kjsp">Lien</td> 
     </tr>
     <tr class="danger">
        <td>Règlement général sur la protection des données</td>
        <td>Droits et obligations</td>
-       <td>Charte informatique des doctorants de l'université de Lyon</td>
+       <td>Modalités de collecte et de traitement de données personnelles dans le cadre 
+         de la participation à une recherche</td>
        <td><a href="RGPD_lettre_info_ proposition.pdf">Lien</td> 
        <td><a href="https://etu.univ-lyon1.fr/consignes-a-respecter-pour-diffuser-un-questionnaire-formulaire-sur-les-listes-de-diffusion-et-les-sites-internet-lyon-1">Lien</td> 
     </tr>
