--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
     Si votre demande est acceptée, vous pouvez alors prendre contact avec votre école doctorale de 
     rattachement afin de demander une aide financière supplémentaire : la participation financière de 
     votre école doctorale étant le plus souvent conditionnée par la participation du laboratoire. </b> </h4></p>
-<p><h4><a href="https://s2hep.univ-lyon1.fr/theme-1-savoirs-et-dispositifs-pour-lenseignement-la-formation-et-la-mediation-en-science">Thème 1
-        <a href="https://s2hep.univ-lyon1.fr/theme-2-historicite">Thème 2
-         <a href="https://s2hep.univ-lyon1.fr/theme-3-transformations-de-la-sante-et-du-corps">Thème 3
+<div class="jumbotron text-center"><p><h4><a href="https://s2hep.univ-lyon1.fr/theme-1-savoirs-et-dispositifs-pour-lenseignement-la-formation-et-la-mediation-en-science">Thème 1 |
+        <a href="https://s2hep.univ-lyon1.fr/theme-2-historicite">Thème 2 |
+         <a href="https://s2hep.univ-lyon1.fr/theme-3-transformations-de-la-sante-et-du-corps">Thème 3</div>
 </h4></p>
    <table class="table table-responsive" style="font-size: 20px;">
     <thead>
