--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
     rattachement afin de demander une aide financière supplémentaire : la participation financière de 
     votre école doctorale étant le plus souvent conditionnée par la participation du laboratoire. </b> </h4></p>
 <div class="jumbotron text-center"><p><h4><a href="https://s2hep.univ-lyon1.fr/theme-1-savoirs-et-dispositifs-pour-lenseignement-la-formation-et-la-mediation-en-science">Thème 1
-  |<a href="https://s2hep.univ-lyon1.fr/theme-2-historicite">Thème 2 </div>
-</h4></p>
+  |<a href="https://s2hep.univ-lyon1.fr/theme-2-historicite"> Thème 2
+</h4></p></div>
    <table class="table table-responsive" style="font-size: 20px;">
     <thead>
       <tr>
