--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
     rattachement afin de demander une aide financière supplémentaire : la participation financière de 
     votre école doctorale étant le plus souvent conditionnée par la participation du laboratoire. </b> </h4></p>
 <div class="jumbotron text-center">
-  <p><h4><a href="https://s2hep.univ-lyon1.fr/theme-1-savoirs-et-dispositifs-pour-lenseignement-la-formation-et-la-mediation-en-science">Thème 1</h4></p>
+  <p><h4><a href="https://s2hep.univ-lyon1.fr/theme-1-savoirs-et-dispositifs-pour-lenseignement-la-formation-et-la-mediation-en-science">Thème 1</a> | 
+  <a href="https://s2hep.univ-lyon1.fr/theme-2-historicite">Thème 2</a>
+  </h4></p>
 </div>
    <table class="table table-responsive" style="font-size: 20px;">
     <thead>
