--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   au sein du laboratoire : administratifs, aide théorique et méthodologique, exemples de formulaires, 
   logiciels etc… Attention, certains documents ne sont qu’illustratifs : leur dernière version n’est 
   disponible que sur les sites dédiés de l'université et à certaines périodes de l’année, c’est pas exemple le cas pour 
-  le formulaire de candidature aux activités complémentaires d’enseignement. </h4></p>
+  le formulaire de candidature aux activités complémentaires d’enseignement. Consulter en priorité le document "FAQ des doctorants"</h4></p>
   <p><h4><b>Pour toute demande de financement (colloque, séminaire, trajet, soutenance etc.) 
     vous devez en priorité prendre contact avec le.la responsable de votre thème d’appartenance. 
     Si votre demande est acceptée, vous pouvez alors prendre contact avec votre école doctorale de 
