--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
      <td>FAQ des doctorants</td>
      <td>Générale</td>
      <td>Les questions courantes</td>
-     <td><a href="p_actes_ARDM_2020.pdf">Lien</td>
+     <td><a href="FAQ.pdf">Lien</td>
      <td>Mis à jour régulièrement</td> 
   </tr>
    <tr class="info">
