--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
        <td>Concevoir des diagrammes avec DRAW.IO</td>
        <td>Aide à la thèses</td>
        <td>Faire des diagrammes magnifiques, professionnels et gratuits avec DRAW.IO</td>
-       <td><a href="https://app.diagrams.netf">Lien</td> 
+       <td><a href="https://app.diagrams.net">Lien</td> 
        <td>Aucune</td> 
      </tr>
     <tr class="warning">
