--- a/index.html
+++ b/index.html
@@ -170,6 +170,34 @@
        <td><a href="Preparer-un-etat-de -lart.pdf">Lien</td> 
        <td>Aucune</td> 
      </tr>
+     <tr class="warning">
+       <td>La problématique, un genre discursif</td>
+       <td>Aide à la thèses</td>
+       <td>Une capsule vidéo sur l'élaboration de la problèmatique via une approche didactique </td>
+       <td><a href="https://www.youtube.com/watch?v=NxY7jQ5Ycj0">Lien</td> 
+       <td>Aucune</td> 
+     </tr>
+     <tr class="warning">
+       <td>La stratégie argumentative</td>
+       <td>Aide à la thèses</td>
+       <td>Une capsule vidéo sur la structure de la problématique</td>
+       <td><a href="https://www.youtube.com/watch?v=_NNW6NwxE18">Lien</td> 
+       <td>Aucune</td> 
+     </tr>
+     <tr class="warning">
+       <td>Des raisonnements convaincants</td>
+       <td>Aide à la thèses</td>
+       <td>Capsule vidéo : Comment construire des raisonnements suffisamment convaincants ?</td>
+       <td><a href="https://www.youtube.com/watch?v=Ydo8tHPbQr8">Lien</td> 
+       <td>Aucune</td> 
+     </tr>
+     <tr class="warning">
+       <td>Le positionnement de l'auteur ou de l'autrice</td>
+       <td>Aide à la thèses</td>
+       <td>Capsule vidéo : positionnement de l’auteur dans un écrit scientifique</td>
+       <td><a href="https://www.youtube.com/watch?v=fpIUvo_oBgc">Lien</td> 
+       <td>Aucune</td> 
+     </tr>
     <tr class="warning">
        <td>Concevoir des diagrammes avec DRAW.IO</td>
        <td>Aide à la thèses</td>
