--- a/index.html
+++ b/index.html
@@ -151,70 +151,70 @@
     </tr>  
     <tr class="warning">
        <td>Extrait de "Comment écrire sa thèse ?"</td>
-       <td>Aide à la thèses</td>
+       <td>Aide à la thèse</td>
        <td>Un extrait de "Comment écrire sa thèse", de Umberto Eco. Réflexion sur le temps nécessaire à l'écriture du thèse.</td>
        <td><a href="Eco_Comment_écrire_sa_thèse.pdf">Lien</td> 
        <td>Voir site de la BNF, bibliothèques, google scholar etc.</td> 
      </tr>
     <tr class="warning">
        <td>Organiser sa thèse et ses recherches</td>
-       <td>Aide à la thèses</td>
+       <td>Aide à la thèse</td>
        <td>Un guide synthètique et quelques astuces pour optimiser son travail de thèse</td>
        <td><a href="guide_redaction_thèse_merged.pdf">Lien</td> 
        <td>Aucune</td> 
      </tr>
     <tr class="warning">
        <td>Préparer un état de l'art</td>
-       <td>Aide à la thèses</td>
+       <td>Aide à la thèse</td>
        <td>Un cours sur la réalisation d'un état de l'art</td>
        <td><a href="Preparer-un-etat-de -lart.pdf">Lien</td> 
        <td>Aucune</td> 
      </tr>
      <tr class="warning">
        <td>La problématique, un genre discursif</td>
-       <td>Aide à la thèses</td>
+       <td>Aide à la thèse</td>
        <td>Une capsule vidéo sur l'élaboration de la problèmatique via une approche didactique </td>
        <td><a href="https://www.youtube.com/watch?v=NxY7jQ5Ycj0">Lien</td> 
        <td>Aucune</td> 
      </tr>
      <tr class="warning">
        <td>La stratégie argumentative</td>
-       <td>Aide à la thèses</td>
+       <td>Aide à la thèse</td>
        <td>Une capsule vidéo sur la structure de la problématique</td>
        <td><a href="https://www.youtube.com/watch?v=_NNW6NwxE18">Lien</td> 
        <td>Aucune</td> 
      </tr>
      <tr class="warning">
        <td>Des raisonnements convaincants</td>
-       <td>Aide à la thèses</td>
+       <td>Aide à la thèse</td>
        <td>Capsule vidéo : Comment construire des raisonnements suffisamment convaincants ?</td>
        <td><a href="https://www.youtube.com/watch?v=Ydo8tHPbQr8">Lien</td> 
        <td>Aucune</td> 
      </tr>
      <tr class="warning">
        <td>Le positionnement de l'auteur ou de l'autrice</td>
-       <td>Aide à la thèses</td>
+       <td>Aide à la thèse</td>
        <td>Capsule vidéo : positionnement de l’auteur dans un écrit scientifique</td>
        <td><a href="https://www.youtube.com/watch?v=fpIUvo_oBgc">Lien</td> 
        <td>Aucune</td> 
      </tr>
     <tr class="warning">
        <td>Concevoir des diagrammes avec DRAW.IO</td>
-       <td>Aide à la thèses</td>
+       <td>Aide à la thèse</td>
        <td>Faire des diagrammes magnifiques, professionnels et gratuits avec DRAW.IO</td>
        <td><a href="https://app.diagrams.net">Lien</td> 
        <td>Aucune</td> 
      </tr>
     <tr class="warning">
        <td>Traitement de texte avec LaTex</td>
-       <td>Aide à la thèses</td>
+       <td>Aide à la thèse</td>
        <td>Rédiger des articles professionnels et structurés avec LaTeX</td>
        <td><a href="https://fr.wikipedia.org/wiki/LaTeX">Lien</td> 
        <td>Aucune</td> 
      </tr>
     <tr class="warning">
        <td>Bibliographie avec Zotero</td>
-       <td>Aide à la thèses</td>
+       <td>Aide à la thèse</td>
        <td>Gérer et centraliser des données bibliographiques et des documents de recherche</td>
        <td><a href="https://fr.wikipedia.org/wiki/Zotero">Lien</td> 
        <td>Aucune</td> 
