--- a/index.html
+++ b/index.html
@@ -275,6 +275,27 @@
        <td><a href="bases_methode_scientifique.pdf">Lien</td> 
        <td>Aucune</td> 
      </tr>
+     <tr class="light">
+       <td>Introduction au logiciel R</td>
+       <td>Théorie, méthodologie</td>
+       <td>R est un logiciel gratuit de traitement statistique</td>
+       <td><a href="introduction_a_R.pdf">Lien</td> 
+       <td>Aucune</td> 
+     </tr>
+     <tr class="light">
+       <td>Introduction au test du CHI2</td>
+       <td>Théorie, méthodologie</td>
+       <td>Un test statistique utile aux sciences sociales</td>
+       <td><a href="khi2_barnier.pdf">Lien</td> 
+       <td>Aucune</td> 
+     </tr>
+     <tr class="light">
+       <td>Introduction à la statistique avec R</td>
+       <td>Théorie, méthodologie</td>
+       <td>Un cours de Bruno Falissard</td>
+       <td><a href="statistique_avec_R.pdf">Lien</td> 
+       <td>Aucune</td> 
+     </tr>
    </tbody>
   </table>
 </div>
