--- a/index.html
+++ b/index.html
@@ -226,6 +226,13 @@
        <td><a href="http://carrefour.uquebec.ca/zotero">Lien</td> 
        <td>Aucune</td> 
      </tr>
+     <tr class="warning">
+       <td>Règle de présentation des références bibliographiques APA7</td>
+       <td>Aide à la thèse</td>
+       <td>Mettre en forme correctement ses références bibliographiques, selon la norme APA 7. Document BU Lyon 1</td>
+       <td><a href="Guide_bibliographique_Normes_APA_7th_Zotero.pdf">Lien</td> 
+       <td>Aucune</td> 
+     </tr>      
     <tr class="light">
        <td>Ingénierie didactique</td>
        <td>Théorie, méthodologie</td>
